@@ -72,6 +72,8 @@
 <tr><td class="form">{tr}Contact{/tr}:</td><td><input type="checkbox" name="feature_contact" {if $feature_contact eq 'y'}checked="checked"{/if}/></td></tr>
 <tr><td class="form">{tr}User Notepad{/tr}:</td><td><input type="checkbox" name="feature_notepad" {if $feature_notepad eq 'y'}checked="checked"{/if}/></td></tr>
 <tr><td class="form">{tr}User files{/tr}:</td><td><input type="checkbox" name="feature_userfiles" {if $feature_userfiles eq 'y'}checked="checked"{/if}/></td></tr>
+<tr><td class="form">{tr}User menu{/tr}:</td><td><input type="checkbox" name="feature_usermenu" {if $feature_usermenu eq 'y'}checked="checked"{/if}/></td></tr>
+<tr><td class="form">{tr}Mini calendar{/tr}:</td><td><input type="checkbox" name="feature_minical" {if $feature_minical eq 'y'}checked="checked"{/if}/></td></tr>
 <tr><td class="form">{tr}Ephemerides{/tr}:</td><td><input type="checkbox" name="feature_eph" {if $feature_eph eq 'y'}checked="checked"{/if}/></td></tr>
 <tr><td class="form">{tr}Theme control{/tr}:</td><td><input type="checkbox" name="feature_theme_control" {if $feature_theme_control eq 'y'}checked="checked"{/if}/></td></tr>
 <tr><td align="center" class="form" colspan="2"><input type="submit" name="features" value="{tr}Set features{/tr}" /></td></tr>
